# rusty-notes

./: Cargo.toml  LICENSE  README.md  install.sh  uninstall.sh
src/: app.rs  cli.rs  lib.rs  main.rs
src/fs/: paths.rs
src/note/: create.rs  finder.rs  mod.rs  model.rs  open.rs  open_in_editor.rs  read.rs  writer.rs
