[package]
name = "rusty-notes"
version = "0.1.0"
edition = "2024"

[dependencies]
ansi_term = "0.12.1"
anyhow = "1.0.100"
chrono = { version = "0.4.43", features = ["serde"] }
chrono-humanize = "0.2.3"
clap = { version = "4.5.54", features = ["derive", "env"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
shellexpand = "3.1.1"
term_size = "0.3.2"
textwrap = "0.16.2"
walkdir = "2.5.0"
